--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body>
     <!-- start navigationbar -->
     <header>
-
         <nav id="header-navbar" class="fixed-top col-md-3 pl-0">
 
             <ul class="nav flex-column mt-5">
@@ -24,7 +23,7 @@
                     <a class="nav-link active" href="#">home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">about us</a>
+                    <a class="nav-link" href="#mission-vision">about us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">services</a>
@@ -41,11 +40,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">contact us</a>
                 </li>
-                
+
             </ul>
         </nav>
         <button type="button" class="btn btn-link" id="navbar-button">
-            <i class="fas fa-bars" ></i>
+            <i class="fas fa-bars"></i>
         </button>
     </header>
 
@@ -134,6 +133,83 @@
             </div>
         </div>
     </section>
+
+    <!-- start footer -->
+    <footer class="pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="about-us__footer">
+                        <img src="./images/logo.PNG" alt="logo">
+                        <p>
+                            'black stone' is an awars-winning and dynamic project &
+                            cost management consultancy. providing a high
+                            quality. value for money, fully tailored service to clients
+                            across all sectors throughout the mena region and beyond.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="footer-links pt-4">
+                        <h3 class="pb-3">useful links</h3>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item pl-0">
+                                <i class="fas fa-angle-right mr-1"></i>
+                                home
+                            </li>
+                            <li class="list-group-item pl-0">
+                                <i class="fas fa-angle-right mr-1"></i>
+                                about us
+                            </li>
+                            <li class="list-group-item pl-0">
+                                <i class="fas fa-angle-right mr-1"></i>
+                                services
+                            </li>
+                            <li class="list-group-item pl-0">
+                                <i class="fas fa-angle-right mr-1"></i>
+                                portofolio
+                            </li>
+                            <li class="list-group-item pl-0">
+                                <i class="fas fa-angle-right mr-1"></i>
+                                client
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="footer-links pt-4">
+                        <h3 class="pb-3">contact us</h3>
+                        <p class="address mt-3">A108 Adam Street
+                                New York, NY 535022
+                                United States
+                                 </p>
+                        <p>
+                            <span>Phone:</span>+1 5589 55488 55
+                        </p>
+                        <p>
+                            <span>Email:</span>info@example.com
+                        </p>
+                        <p class="social-media pt-3">
+                            <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#">
+                                    <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#">
+                                    <i class="fab fa-google-plus-g"></i>
+                            </a>
+                            <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end footer -->
 
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/popper.js"></script>
