--- a/index.html
+++ b/index.html
@@ -134,6 +134,60 @@
         </div>
     </section>
 
+    <!-- start our client section -->
+    <section id="our-client" class="pt-5 pb-5">
+        <div class="overlay"></div>
+            <div class="line-above__header"></div>
+
+        <h2 class="text-center">our clients</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                    <div class="client-logo">
+                        <div>
+                            <img src="./images/client1-.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                    <div class="client-logo">
+                        <div>
+                            <img src="./images/client1-.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                    <div class="client-logo">
+                        <div>
+                            <img src="./images/client1-.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                    <div class="client-logo">
+                        <div>
+                            <img src="./images/client1-.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                    <div class="client-logo">
+                        <div>
+                            <img src="./images/client1-.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                    <div class="client-logo">
+                        <div>
+                            <img src="./images/client1-.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end our client section -->
     <!-- start footer -->
     <footer class="pt-5">
         <div class="container">
@@ -181,9 +235,9 @@
                     <div class="footer-links pt-4">
                         <h3 class="pb-3">contact us</h3>
                         <p class="address mt-3">A108 Adam Street
-                                New York, NY 535022
-                                United States
-                                 </p>
+                            New York, NY 535022
+                            United States
+                        </p>
                         <p>
                             <span>Phone:</span>+1 5589 55488 55
                         </p>
@@ -192,16 +246,16 @@
                         </p>
                         <p class="social-media pt-3">
                             <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-facebook-f"></i>
                             </a>
                             <a href="#">
-                                    <i class="fab fa-instagram"></i>
+                                <i class="fab fa-instagram"></i>
                             </a>
                             <a href="#">
-                                    <i class="fab fa-google-plus-g"></i>
+                                <i class="fab fa-google-plus-g"></i>
                             </a>
                             <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-linkedin-in"></i>
                             </a>
                         </p>
                     </div>
