--- a/index.html
+++ b/index.html
@@ -133,54 +133,77 @@
             </div>
         </div>
     </section>
+    <!-- end mission & vision -->
+
+    <!-- start section of what are provide  -->
+    
+    <!-- end section of what are provide  -->
 
     <!-- start our client section -->
     <section id="our-client" class="pt-5 pb-5">
-        <div class="overlay"></div>
-            <div class="line-above__header"></div>
+        <div class="overlay pt-5">
+                <div class="line-above__header"></div>
+                <h2 class="text-center pb-3 base-color">our clients</h2>
 
-        <h2 class="text-center">our clients</h2>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 pr-1 pl-1">
-                    <div class="client-logo">
-                        <div>
-                            <img src="./images/client1-.png" alt="">
+        </div>
+
+        <div class="our-client_images">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                        <div class="client-logo">
+                            <div>
+                                <img src="./images/client1-.png" alt="">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 pr-1 pl-1">
-                    <div class="client-logo">
-                        <div>
-                            <img src="./images/client1-.png" alt="">
+                    <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                        <div class="client-logo">
+                            <div>
+                                <img src="./images/client1-.png" alt="">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 pr-1 pl-1">
-                    <div class="client-logo">
-                        <div>
-                            <img src="./images/client1-.png" alt="">
+                    <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                        <div class="client-logo">
+                            <div>
+                                <img src="./images/client1-.png" alt="">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 pr-1 pl-1">
-                    <div class="client-logo">
-                        <div>
-                            <img src="./images/client1-.png" alt="">
+                    <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                        <div class="client-logo">
+                            <div>
+                                <img src="./images/client1-.png" alt="">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 pr-1 pl-1">
-                    <div class="client-logo">
-                        <div>
-                            <img src="./images/client1-.png" alt="">
+                    <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                        <div class="client-logo">
+                            <div>
+                                <img src="./images/client1-.png" alt="">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 pr-1 pl-1">
-                    <div class="client-logo">
-                        <div>
-                            <img src="./images/client1-.png" alt="">
+                    <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                        <div class="client-logo">
+                            <div>
+                                <img src="./images/client1-.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                        <div class="client-logo">
+                            <div>
+                                <img src="./images/client1-.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 pr-1 pl-1">
+                        <div class="client-logo">
+                            <div>
+                                <img src="./images/client1-.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -195,7 +218,7 @@
                 <div class="col-md-4">
                     <div class="about-us__footer">
                         <img src="./images/logo.PNG" alt="logo">
-                        <p>
+                        <p class="base-color">
                             'black stone' is an awars-winning and dynamic project &
                             cost management consultancy. providing a high
                             quality. value for money, fully tailored service to clients
