adding what we provide section

--- a/index.html
+++ b/index.html
@@ -58,40 +58,6 @@
         </div>
     </section>
     <!-- end hero section  -->
-    <!-- strat about us section -->
-    <section id="about-us" class="d-none">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-4 pr-0 pl-0">
-                    <div class="about-us__image">
-                        <img src="./images/aboutUs.PNG" alt="about us image">
-                    </div>
-                </div>
-                <div class="col-md-7 pr-0 pl-0">
-                    <div class="about-us__content bg-dark ">
-                        <h2>about us</h2>
-                        <p>
-                            'black stone' is an awars-winning and dynamic project &
-                            cost management consultancy. providing a high
-                            quality. value for money, fully tailored service to clients
-                            across all sectors throughout the mena region and beyond.
-                        </p>
-                        <p>
-                            our knowlegeable and experinced team offer fully tailored
-                            solutions that lead our clients projects from
-                            initial concept right through to operational handover with continued support
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-1 pr-0 pl-0">
-                    <div class="about-us__image">
-                        <img src="./images/abutUs2-.jpg" alt="about us image">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- end about us section -->
     <!-- strat mission&vision -->
     <section id="mission-vision">
         <div class="container-fluid">
@@ -135,19 +101,46 @@
     </section>
     <!-- end mission & vision -->
 
-    <!-- start section of what are provide  -->
-    
-    <!-- end section of what are provide  -->
+    <!-- start section of what we provide  -->
+    <section class="what-provide__section">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 m-auto">
+
+                    <div class="what-provide__content sections_padding ">
+                        <h2 class="base-color text-center">what we provide ...</h2>
+                        <p>
+                            using our professional software we carry out preventive
+                            and corrective maintenance for the following .
+                        </p>
+
+                        <ul>
+                            <li>external and internal civil works</li>
+                            <li>mep work</li>
+                            <li>fixed and loops furniture</li>
+                            <li>joinery work</li>
+                        </ul>
+                        <!-- <p>
+                            those service are provided to residential, commercial and office 
+                            bulding in an efficent and timely maner.
+                        </!--> 
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </section>
+    <!-- end section of what we provide  -->
 
     <!-- start our client section -->
-    <section id="our-client" class="pt-5 pb-5">
-        <div class="overlay pt-5">
-                <div class="line-above__header"></div>
-                <h2 class="text-center pb-3 base-color">our clients</h2>
-
+    <section id="our-client" class="sections_padding">
+        <div class="overlay"></div>
+        <div class="our-client__header">
+            <div class="line-above__header"></div>
+            <h2 class="text-center pb-3 base-color">our clients</h2>
         </div>
-
-        <div class="our-client_images">
+        <div class="our-client_images m-auto">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 pr-1 pl-1">
@@ -212,7 +205,7 @@
     </section>
     <!-- end our client section -->
     <!-- start footer -->
-    <footer class="pt-5">
+    <footer class="sections_padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
