adding our services section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="./js/fontawesome.js" ></script> -->
 
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/owl.carousel.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -100,21 +101,135 @@
         </div>
     </section>
     <!-- end mission & vision -->
-
+    <!-- strart our services -->
+    <section id="services_section" class="sections_padding ">
+        <div class="line-above__header"></div>
+        <h2 class="base-color text-center">our servises</h2>
+        <!-- start carousel of service -->
+        <div class="container">
+            <div class="row">
+                <div id="owl-demo" class="owl-carousel owl-theme pt-5 " >
+                    
+                    <!-- gympsum ceiling works service -->
+                    <div class="item ">
+                        <div class="card ml-3 mr-3">
+                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">gympsum ceiling works</h3>
+                                <p class="card-text">
+                                    We provide a range of versatile solutions for the repair,
+                                    maintenance and improvement of gypsum ceilings.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--doors & partitions service  -->
+                    <div class="item ">
+                        <div class="card ml-3 mr-3">
+                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">doors & partitions</h3>
+                                <p class="card-text">
+                                    SERVICE We provide doors to you that have been produced and assembled
+                                    in accordance with regulations.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- alignment & adjustments service -->
+                    <div class="item ">
+                        <div class="card ml-3 mr-3">
+                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="alignment & adjustments">
+                            <div class="card-body">
+                                <h5 class="card-title">alignment & adjustments</h3>
+                                <p class="card-text">
+                                    Provided that no visible defects are identified during inspections,
+                                    in the event of greater frequency of use.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- silicone & sealant service -->
+                    <div class="item ">
+                        <div class="card ml-3 mr-3">
+                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="silicone & sealant.">
+                            <div class="card-body">
+                                <h5 class="card-title">silicone & sealant</h3>
+                                <p class="card-text">
+                                    We believe that every corner should have the perfect finish.
+                                    we provide the best quality of silicone filling with various color selections.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- fixed and loose furnitue service -->
+                    <div class="item ">
+                        <div class="card ml-3 mr-3">
+                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="fixed and loose furnitue">
+                            <div class="card-body">
+                                <h5 class="card-title">fixed and loose furnitue</h3>
+                                <p class="card-text">
+                                    We care about the small details. As we also know how much
+                                    it is important to all our clients.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- internal furniture transport service -->
+                    <div class="item ">
+                            <div class="card ml-3 mr-3 ">
+                                <img src="./images/abutUs2--.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">internal furniture transport</h3>
+                                    <p class="card-text">
+                                        Our expert packing crew will arrive early on the scheduled day and
+                                        will carry out the designated tasks with military precision.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    <!-- electrical services -->
+                    <div class="item ">
+                        <div class="card ml-3 mr-3">
+                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="electrical services">
+                            <div class="card-body">
+                                <h5 class="card-title">electrical services</h3>
+                                <p class="card-text">
+                                    We carry -out a wide-range of work in the repair and general
+                                    maintenance for various types of electrical works .
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- upholstery services -->
+                    <div class="item ">
+                        <div class="card ml-3 mr-3">
+                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="upholstery">
+                            <div class="card-body">
+                                <h5 class="card-title">upholstery</h3>
+                                <p class="card-text">
+                                    We provide cleaning services and repairing for any kind of upholstery
+                                    like leather, silk and cotton
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!-- end our services -->
     <!-- start section of what we provide  -->
-    <section class="what-provide__section">
+    <section class="what-provide__section ">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-8 m-auto">
-
                     <div class="what-provide__content sections_padding ">
                         <h2 class="base-color text-center">what we provide ...</h2>
                         <p>
                             using our professional software we carry out preventive
                             and corrective maintenance for the following .
                         </p>
-
                         <ul>
                             <li>external and internal civil works</li>
                             <li>mep work</li>
@@ -124,12 +239,12 @@
                         <!-- <p>
                             those service are provided to residential, commercial and office 
                             bulding in an efficent and timely maner.
-                        </!--> 
+                        </!-->
                     </div>
                 </div>
             </div>
         </div>
-        
+
     </section>
     <!-- end section of what we provide  -->
 
@@ -284,8 +399,8 @@
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/popper.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/owl.carousel.js"></script>
     <script src="./js/all.min.js"></script>
-    <!-- <script src="./js/anime.min.js"></script> -->
     <script src="./js/script.js"></script>
 </body>
 
