adding our team section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     <!-- end hero section  -->
     <!-- strat mission&vision -->
     <section id="mission-vision">
+        <!-- <div class="line-above__header"></div>
+        <h2>about us</h2> -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 p-0">
@@ -113,7 +115,7 @@
                     <!-- gympsum ceiling works service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="...">
+                            <img src="./images/services/service3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">gympsum ceiling works</h3>
                                 <p class="card-text">
@@ -126,7 +128,7 @@
                     <!--doors & partitions service  -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="...">
+                            <img src="./images/services/service2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">doors & partitions</h3>
                                 <p class="card-text">
@@ -136,36 +138,62 @@
                             </div>
                         </div>
                     </div>
-                    <!-- alignment & adjustments service -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3">
-                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="alignment & adjustments">
-                            <div class="card-body">
-                                <h5 class="card-title">alignment & adjustments</h3>
-                                <p class="card-text">
-                                    Provided that no visible defects are identified during inspections,
-                                    in the event of greater frequency of use.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
                     <!-- silicone & sealant service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="silicone & sealant.">
+                            <img src="./images/services/service5.jpg" class="card-img-top" alt="silicone & sealant.">
                             <div class="card-body">
                                 <h5 class="card-title">silicone & sealant</h3>
-                                <p class="card-text">
-                                    We believe that every corner should have the perfect finish.
-                                    we provide the best quality of silicone filling with various color selections.
-                                </p>
+                                    <p class="card-text">
+                                        We believe that every corner should have the perfect finish.
+                                        we provide the best quality of silicone filling with various color selections.
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                        <!-- internal furniture transport service -->
+                        <div class="item ">
+                            <div class="card ml-3 mr-3 ">
+                                <img src="./images/services/service1.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">internal furniture transport</h3>
+                                        <p class="card-text">
+                                            Our expert packing crew will arrive early on the scheduled day and
+                                            will carry out the designated tasks with military precision.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- electrical services -->
+                        <div class="item ">
+                        <div class="card ml-3 mr-3">
+                            <img src="./images/services/service7.jpg" class="card-img-top" alt="electrical services">
+                            <div class="card-body">
+                                <h5 class="card-title">electrical services</h3>
+                                    <p class="card-text">
+                                        We carry -out a wide-range of work in the repair and general
+                                        maintenance for various types of electrical works .
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- alignment & adjustments service -->
+                        <div class="item ">
+                            <div class="card ml-3 mr-3">
+                                <img src="./images/services/service4.jpg" class="card-img-top" alt="alignment & adjustments">
+                                <div class="card-body">
+                                    <h5 class="card-title">alignment & adjustments</h3>
+                                    <p class="card-text">
+                                        Provided that no visible defects are identified during inspections,
+                                        in the event of greater frequency of use.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     <!-- fixed and loose furnitue service -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="fixed and loose furnitue">
+                            <img src="./images/services/service6.jpg" class="card-img-top" alt="fixed and loose furnitue">
                             <div class="card-body">
                                 <h5 class="card-title">fixed and loose furnitue</h3>
                                 <p class="card-text">
@@ -175,41 +203,15 @@
                             </div>
                         </div>
                     </div>
-                    <!-- internal furniture transport service -->
-                    <div class="item ">
-                            <div class="card ml-3 mr-3 ">
-                                <img src="./images/abutUs2--.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">internal furniture transport</h3>
-                                    <p class="card-text">
-                                        Our expert packing crew will arrive early on the scheduled day and
-                                        will carry out the designated tasks with military precision.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    <!-- electrical services -->
+                        <!-- upholstery services -->
                     <div class="item ">
                         <div class="card ml-3 mr-3">
-                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="electrical services">
-                            <div class="card-body">
-                                <h5 class="card-title">electrical services</h3>
-                                <p class="card-text">
-                                    We carry -out a wide-range of work in the repair and general
-                                    maintenance for various types of electrical works .
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- upholstery services -->
-                    <div class="item ">
-                        <div class="card ml-3 mr-3">
-                            <img src="./images/abutUs2--.jpg" class="card-img-top" alt="upholstery">
+                            <img src="./images/services/service8.jpg" class="card-img-top" alt="upholstery">
                             <div class="card-body">
                                 <h5 class="card-title">upholstery</h3>
                                 <p class="card-text">
                                     We provide cleaning services and repairing for any kind of upholstery
-                                    like leather, silk and cotton
+                                    like leather, silk and cotton REPAIRING- Stitching - Cleaning
                                 </p>
                             </div>
                         </div>
@@ -218,6 +220,7 @@
             </div>
     </section>
     <!-- end our services -->
+   
     <!-- start section of what we provide  -->
     <section class="what-provide__section ">
         <div class="overlay"></div>
@@ -244,11 +247,46 @@
                 </div>
             </div>
         </div>
-
     </section>
     <!-- end section of what we provide  -->
-
-    <!-- start our client section -->
+    <!-- start mangar message section -->
+    <section id="our-team" class="sections_padding">
+        <div class="line-above__header"></div>
+        <h2  class="text-center pb-3 base-color">our team</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mangar-info">
+                        <img src="./images/mangars/manager1.PNG" alt="" >
+                        <div class="mangar-name text-center">
+                            <h5>nidal ghandour</h5>
+                            <p>managing director</p>
+                        </div>
+                    </div>
+                </div> 
+                <div class="col-md-4">
+                    <div class="mangar-info">
+                        <img src="./images/mangars/manager2.PNG" alt="" >
+                        <div class="mangar-name text-center">
+                            <h5>nidal ayal</h5>
+                            <p>commerical director</p>
+                        </div>
+                    </div>
+                </div> 
+                <div class="col-md-4">
+                    <div class="mangar-info">
+                        <img src="./images/mangars/manager3.PNG" alt="" >
+                        <div class="mangar-name text-center">
+                            <h5>iftekhar sayed</h5>
+                            <p>projects director</p>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </div>
+        
+    </section>
+    <!-- end mangar message section -->    <!-- start our client section -->
     <section id="our-client" class="sections_padding">
         <div class="overlay"></div>
         <div class="our-client__header">
